[package]
name = "traffic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# pnet="0.34.0"
hyper = { version= "1.1.0", features = ["full"]}
tokio = { version= "1.35.1", features = ["full"]}
tower = { version= "0.4.13", features = ["full"]}
url = "2.5.0"
httparse = "1.8.0"